bug 594889 - improve glyph spacing with DirectWrite fonts when ClearType is disabled by using GDI-compatible instead of 'ideal' metrics. r=bas a=blocking2.0